# nnSimplified

./: README.md  pyproject.toml
nnsimplified/: metrics.py  misc.py  utils.py
nnsimplified/dataloading/: __init__.py  dataloader.py  helper.py
nnsimplified/nn/: __init__.py  additional_loss.py  helper.py
nnsimplified/nn/feature/: __init__.py  feature_collection.py  features.py  helper.py  transformation.py
nnsimplified/nn/metrics/: helper.py  regression.py  reporting.py
nnsimplified/nn/model/: __init__.py  fc.py  utils.py
nnsimplified/nn/model/time_series/: TSmixer.py  __init__.py
nnsimplified/nn/module/: __init__.py  assemble.py  base.py  custom.py  residual.py  simple.py
nnsimplified/nn/trainer/: __init__.py  baseTrainer.py  regression.py
nnsimplified/preprocessing/: encoding.py  transform.py
notebooks/: some_examples.ipynb
