[project]
name = "nnsimplified"
version = "0.3.2"
authors = [{ name="Dennis Liang", email="dliang1122@gmail.com" }]
description = "A package for simplifying neural network structure creation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3",
               "Operating System :: OS Independent"]
dependencies = ["numpy>=1.25.2",
                "torch>=2.3.1",
                "torchaudio>=2.3.1",
                "torchvision>=0.18.1",
                "jsons",
                "matplotlib",
                "ipython>=8.16.1",
                "ipywidgets>=8.1.1",
                "torchview>=0.2.6",
                "graphviz>=0.20.1",
                "torchmetrics>=1.2.0",
                "typing_extensions>=4.8.0"
                ]

[project.urls]
"Homepage" = "https://github.com/dliang76/nnSimplified"

[build-system]
requires = ["setuptools>=75",
            "cppy",
            "pybind11"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ['nnsimplified*']
