[project]
name = "nnsimplified"
version = "0.3.2"
authors = [{ name="Dennis Liang", email="dliang1122@gmail.com" }]
description = "A package for simplifying neural network structure creation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = ["numpy ==2.4.0",
                "torch ==2.9.1",
                "torchaudio ==2.9.1",
                "torchvision ==0.24.1",
                "jsons",
                "matplotlib",
                "ipython ==9.8.0",
                "ipywidgets ==8.1.8",
                "torchview ==0.2.7",
                "graphviz ==0.21",
                "torchmetrics ==1.8.2"
                ]

[project.urls]
"Homepage" = "https://github.com/dliang76/nnSimplified"

[build-system]
requires = ["setuptools>=75",
            "cppy",
            "pybind11"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ['nnsimplified*']
